force-app/main/default/objects/Account/fields/Aprobada__c.field-meta.xml
<CustomField>
    <fullName>Aprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobada</label>
    <type>Checkbox</type>
</CustomField>