force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área de control de crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMQ</fullName>
                <default>true</default>
                <label>Area Control de Grupo Imperquimia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>