force-app/main/default/objects/Account/fields/Asignacion_Cuentas__c.field-meta.xml
<CustomField>
    <fullName>Asignacion_Cuentas__c</fullName>
    <formula>IF( CreatedBy.Username  =  Owner.Username ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignacion Cuentas</label>
    <type>Checkbox</type>
</CustomField>