force-app/main/default/objects/Account/fields/Cambio_de_propietario__c.field-meta.xml
<CustomField>
    <fullName>Cambio_de_propietario__c</fullName>
    <formula>IF( CreatedBy.Username  =  Owner.Username ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cambio de propietario</label>
    <type>Checkbox</type>
</CustomField>