force-app/main/default/objects/Account/fields/centro_suministrador__c.field-meta.xml
<CustomField>
    <fullName>centro_suministrador__c</fullName>
    <label>Centro Suministrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC01</fullName>
                <label>Acapulco</label>
            </value>
            <value>
                <fullName>CA01</fullName>
                <label>Cancún</label>
            </value>
            <value>
                <fullName>CH01</fullName>
                <label>Chihuahua</label>
            </value>
            <value>
                <fullName>CU01</fullName>
                <label>Culiacán</label>
            </value>
            <value>
                <fullName>CV01</fullName>
                <label>Cuernavaca</label>
            </value>
            <value>
                <fullName>ERMI</fullName>
                <label>Ermita</label>
            </value>
            <value>
                <fullName>GD01</fullName>
                <label>Guadalajara</label>
            </value>
            <value>
                <fullName>HE01</fullName>
                <label>Hermosillo</label>
            </value>
            <value>
                <fullName>IMPQ</fullName>
                <label>Imperquimia</label>
            </value>
            <value>
                <fullName>IMPV</fullName>
                <label>Imperquimia Ventas</label>
            </value>
            <value>
                <fullName>LE01</fullName>
                <label>León</label>
            </value>
            <value>
                <fullName>ME01</fullName>
                <label>Mérida</label>
            </value>
            <value>
                <fullName>ME02</fullName>
                <label>Mérida II</label>
            </value>
            <value>
                <fullName>MIXC</fullName>
                <label>Mixcoac</label>
            </value>
            <value>
                <fullName>MT01</fullName>
                <label>Monterrey</label>
            </value>
            <value>
                <fullName>PSUR</fullName>
                <label>Perisur</label>
            </value>
            <value>
                <fullName>QE01</fullName>
                <label>Querétaro</label>
            </value>
            <value>
                <fullName>RAZA</fullName>
                <label>La Raza</label>
            </value>
            <value>
                <fullName>RIVI</fullName>
                <label>Riviera</label>
            </value>
            <value>
                <fullName>SATE</fullName>
                <label>Satélite</label>
            </value>
            <value>
                <fullName>TJ01</fullName>
                <label>Tijuana</label>
            </value>
            <value>
                <fullName>VE01</fullName>
                <label>Veracruz</label>
            </value>
            <value>
                <fullName>VI01</fullName>
                <label>Villahermosa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>