force-app/main/default/objects/Account/fields/Condicion_de_expedicion__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_expedicion__c</fullName>
    <label>Condicion de expedicion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>Estándar</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Recogida</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Inmediatamente</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Servicios de Transpo</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Devoluciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>