force-app/main/default/objects/Account/fields/condiciones_de_pago__c.field-meta.xml
<CustomField>
    <fullName>condiciones_de_pago__c</fullName>
    <defaultValue>&quot;NT00&quot;</defaultValue>
    <label>Condiciones de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NT00</fullName>
                <label>Pagado a la recepcion</label>
            </value>
            <value>
                <fullName>NT08</fullName>
                <label>Vencimiento 08 dias</label>
            </value>
            <value>
                <fullName>NT15</fullName>
                <label>Vencimiento 15 dias</label>
            </value>
            <value>
                <fullName>NT20</fullName>
                <label>Vencimiento 20 dias</label>
            </value>
            <value>
                <fullName>NT30</fullName>
                <label>Vencimiento 30 dias</label>
            </value>
            <value>
                <fullName>NT45</fullName>
                <label>Vencimiento 45 dias</label>
            </value>
            <value>
                <fullName>NT60</fullName>
                <label>Vencimiento 60 dias</label>
            </value>
            <value>
                <fullName>NT90</fullName>
                <label>Vencimiento 90 dias</label>
            </value>
            <value>
                <fullName>NT120</fullName>
                <label>Vencimiento 120 dias</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>