force-app/main/default/objects/Account/fields/CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronico__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>