force-app/main/default/objects/Account/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotizacion</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>