force-app/main/default/objects/Account/fields/Credito_Acumulado__c.field-meta.xml
<CustomField>
    <fullName>Credito_Acumulado__c</fullName>
    <label>Crédito Acumulado</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>