force-app/main/default/objects/Account/fields/Credito_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Credito_Disponible__c</fullName>
    <description>Almacena el crédito del cliente para visualizarlo a nivel cuenta</description>
    <formula>LineaCredito__c - Credito_Acumulado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credito Disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>