force-app/main/default/objects/Account/fields/Credito_SAP__c.field-meta.xml
<CustomField>
    <fullName>Credito_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seleccionado si el cliente tiene crédito SAP y falso si el crédito esta vencido</description>
    <label>Crédito SAP</label>
    <type>Checkbox</type>
</CustomField>