force-app/main/default/objects/Account/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <label>Delegación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>