force-app/main/default/objects/Account/fields/Detalle_de_la_Solicitud_de_Autorizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_la_Solicitud_de_Autorizaci_n__c</fullName>
    <inlineHelpText>En caso de que requiera solicitar alguna autorización, favor de detallar la solicitud</inlineHelpText>
    <label>Detalle de la Solicitud de Autorización</label>
    <type>TextArea</type>
</CustomField>