force-app/main/default/objects/Account/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <formula>Text(Owner.Equipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipo</label>
    <type>Text</type>
</CustomField>