force-app/main/default/objects/Account/fields/Esquema_cliente__c.field-meta.xml
<CustomField>
    <fullName>Esquema_cliente__c</fullName>
    <label>Esquema cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Estandar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>