force-app/main/default/objects/Account/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Sujeta a aprobación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>