force-app/main/default/objects/Account/fields/grupo__c.field-meta.xml
<CustomField>
    <fullName>grupo__c</fullName>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clave_delcanal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Distribuidor A</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Distribuidor B</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Distribuidor C</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Distribuidor D</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Contratistas A</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Contratistas B</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Contratistas C</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Multimarcas A</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Multimarcas B</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Multimarcas C</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Obras y Proyectos</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Industriales</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Exportación</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Mostrador</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Desarrollo de Negoci</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Aplicador A</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Contratistas Plus</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>