force-app/main/default/objects/Account/fields/Grupo_de_Cuentas__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Cuentas__c</fullName>
    <label>Grupo de Cuentas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>121000</fullName>
                <default>true</default>
                <label>Clientes Nacionales</label>
            </value>
            <value>
                <fullName>121001</fullName>
                <label>Clientes Extranjeros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>