force-app/main/default/objects/Account/fields/Grupo_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_precios__c</fullName>
    <label>Grupo de precios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Gran consumidor</label>
            </value>
            <value>
                <fullName>02</fullName>
                <default>true</default>
                <label>Comprador ocasional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>