force-app/main/default/objects/Account/fields/grupo_de_tesoreria__c.field-meta.xml
<CustomField>
    <fullName>grupo_de_tesoreria__c</fullName>
    <label>Grupo de tesorería</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y01</fullName>
                <default>true</default>
                <label>C-Nacional</label>
            </value>
            <value>
                <fullName>Y02</fullName>
                <label>C-Exporta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>