force-app/main/default/objects/Account/fields/GrupoImputacion__c.field-meta.xml
<CustomField>
    <fullName>GrupoImputacion__c</fullName>
    <label>Grupo de Imputación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Ingresos nacional</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Ingresos extranjero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>