force-app/main/default/objects/Account/fields/id_de_sap__c.field-meta.xml
<CustomField>
    <fullName>id_de_sap__c</fullName>
    <externalId>true</externalId>
    <label>Id de Sap</label>
    <length>40</length>
    <type>Text</type>
</CustomField>