force-app/main/default/objects/Account/fields/IMP_Calle__c.field-meta.xml
<CustomField>
    <fullName>IMP_Calle__c</fullName>
    <description>Calle del cliente</description>
    <label>Calle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>