force-app/main/default/objects/Account/fields/IMP_Documentos30dias__c.field-meta.xml
<CustomField>
    <fullName>IMP_Documentos30dias__c</fullName>
    <label>Total vencido a 30 días</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>