force-app/main/default/objects/Account/fields/IMP_IndicadorImpuesto__c.field-meta.xml
<CustomField>
    <fullName>IMP_IndicadorImpuesto__c</fullName>
    <description>Almacena el valor 1 o 2 dependiendo el impuesto del cliente</description>
    <label>Indicador de impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>16%</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>8%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>