force-app/main/default/objects/Account/fields/IMP_LlaveExterna__c.field-meta.xml
<CustomField>
    <fullName>IMP_LlaveExterna__c</fullName>
    <description>Almacena la llave para extensión de cliente</description>
    <externalId>true</externalId>
    <label>Llave exclusiva</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>