force-app/main/default/objects/Account/fields/IMP_PaisFacturacion__c.field-meta.xml
<CustomField>
    <fullName>IMP_PaisFacturacion__c</fullName>
    <defaultValue>&quot;MX&quot;</defaultValue>
    <description>Este campo servirá para enviar el código de País en la integración de SAP -SF</description>
    <label>País de Facturación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
                <label>MÉXICO</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>COLOMBIA</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>COSTA RICA</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>ESTADOS UNIDOS</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>GUATEMALA</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>EL SALVADOR</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>REP. DOMINICANA</label>
            </value>
            <value>
                <fullName>NI</fullName>
                <label>NICARAGUA</label>
            </value>
            <value>
                <fullName>HN</fullName>
                <label>HONDURAS</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>PUERTO RICO</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>ESPAÑA</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>BRASIL</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>CANADÁ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>