force-app/main/default/objects/Account/fields/IMP_Saldo60__c.field-meta.xml
<CustomField>
    <fullName>IMP_Saldo60__c</fullName>
    <description>Captura el valor del saldo a 60 días mediante el servicio de  consulta de crédito</description>
    <label>Saldo a 60 días</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>