force-app/main/default/objects/Account/fields/IMP_SaldoComprometido__c.field-meta.xml
<CustomField>
    <fullName>IMP_SaldoComprometido__c</fullName>
    <description>Representa el saldo comprometido del cliente</description>
    <label>Saldo comprometido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>