force-app/main/default/objects/Account/fields/IMP_SaldoVencido__c.field-meta.xml
<CustomField>
    <fullName>IMP_SaldoVencido__c</fullName>
    <label>Saldo vencido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>