force-app/main/default/objects/Account/fields/IMP_TotalEstadosCuenta__c.field-meta.xml
<CustomField>
    <fullName>IMP_TotalEstadosCuenta__c</fullName>
    <label>Saldo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>