force-app/main/default/objects/Account/fields/IMP_TotalFacturas__c.field-meta.xml
<CustomField>
    <fullName>IMP_TotalFacturas__c</fullName>
    <label>Líneas totales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>