force-app/main/default/objects/Account/fields/IMP_TotalFacturasVencidas__c.field-meta.xml
<CustomField>
    <fullName>IMP_TotalFacturasVencidas__c</fullName>
    <label>Número de documentos saldo vencido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>