force-app/main/default/objects/Account/fields/Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Impuesto__c</fullName>
    <label>indicador de impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.16</fullName>
            </value>
            <value>
                <fullName>.08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>