force-app/main/default/objects/Account/fields/Intercoms_1__c.field-meta.xml
<CustomField>
    <fullName>Intercoms_1__c</fullName>
    <defaultValue>&quot;FOB&quot;</defaultValue>
    <label>Intercoms 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>