force-app/main/default/objects/Account/fields/Intercoms_2__c.field-meta.xml
<CustomField>
    <fullName>Intercoms_2__c</fullName>
    <defaultValue>&quot;FRANCO A BORDO&quot;</defaultValue>
    <label>Intercoms 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>