force-app/main/default/objects/Account/fields/LineaCredito__c.field-meta.xml
<CustomField>
    <fullName>LineaCredito__c</fullName>
    <label>Línea de Crédito</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>