force-app/main/default/objects/Account/fields/Lista_de_Precios_SF__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_SF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios SF</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>