force-app/main/default/objects/Account/fields/ListaPrecios__c.field-meta.xml
<CustomField>
    <fullName>ListaPrecios__c</fullName>
    <label>Lista de precios SAP</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clave_delcanal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>Mostrador</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Distribuidores</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>