force-app/main/default/objects/Account/fields/Numero_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Exterior__c</fullName>
    <description>Número exterior de la cuenta</description>
    <label>Número Exterior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>