force-app/main/default/objects/Account/fields/Numero_Interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior__c</fullName>
    <description>Contiene el número interior de la cuenta</description>
    <label>Número Interior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>