force-app/main/default/objects/Account/fields/OrganizacionVentas__c.field-meta.xml
<CustomField>
    <fullName>OrganizacionVentas__c</fullName>
    <label>Organización de Ventas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOGA</fullName>
                <label>Gogal</label>
            </value>
            <value>
                <fullName>GRAV</fullName>
                <label>Graviq</label>
            </value>
            <value>
                <fullName>IMPQ</fullName>
                <default>true</default>
                <label>Imperquimia SA de CV</label>
            </value>
            <value>
                <fullName>IQSE</fullName>
                <label>IQ Servicios</label>
            </value>
            <value>
                <fullName>LEMA</fullName>
                <label>Lemma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>