force-app/main/default/objects/Account/fields/prioridad_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>prioridad_de_entrega__c</fullName>
    <label>Prioridad de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>alta</label>
            </value>
            <value>
                <fullName>02</fullName>
                <default>true</default>
                <label>normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>