force-app/main/default/objects/Account/fields/Proceso_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Proceso_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso Aprobado</label>
    <type>Checkbox</type>
</CustomField>